feat(issues): expose task outputs and fix UpdateFields HTTP method (#105)
* feat(issues): expose task outputs and fix UpdateFields HTTP method

Create, CreateComment, and UpdateFields discarded Jira's REST response and
returned VoidOutput, so downstream tasks couldn't reference the created
issue key/id or comment id. JiraClient/JiraTemplate now return the HTTP
response instead of swallowing it, and each task parses it into a typed
Output (id, key, url, self as applicable).

UpdateFields switched from POST to PUT on /rest/api/2/issue/{issueIdOrKey}:
Jira REST v2's edit-issue endpoint only accepts PUT and returns 204, so the
task's outputs are derived from its own rendered inputs.

baseUrl is no longer mutated by the tasks (previously accumulated the REST
route on every run), fixing a latent bug that broke retries and made a
trailing slash in baseUrl produce a double slash in the request URI.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

* chore: simplify

Extract the duplicated Jira response parsing/validation logic in Create and
CreateComment into shared JiraUtil.parseJsonResponse/requireField helpers.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

* fix(issues): allow Create without description

Create failed whenever summary/description were omitted: jira-template.peb
referenced {{ summary }}/{{ description }} unconditionally, but they're only
added to the render map when present, and Kestra's strict Pebble rendering
throws on an undefined variable.

Build the "fields" JSON map directly in Java instead of rendering it through
a Pebble template: optional fields are simply omitted from the map rather
than left as an undefined template variable, and Jackson's serialization
correctly escapes values containing quotes or newlines (the previous
{{ summary }}/{{ description }} string interpolation did not). Removed the
now-unused jira-template.peb.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

* fix(issues): address review feedback

- Ad